--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -20,22 +20,13 @@
         <div class="btn btn-flat" style="height:45px">
           <span><i class="fa fa-facebook"></i></span>
           <span><i class="fa fa-twitter"></i></span>
-          <span><i class="fa fa-youtube-play"></i></span>
+          <span><i class="fa fa-github"></i></span>
         </div>
         {{!-- social Panel --}}
         <div class="nav-socialPanel">
-          <a href="#" target="_blank"><span class="btn btn-flat bg-facebook"><i class="fa fa-facebook"></i></span>Facebook</a>
-          <a href="#" target="_blank"><span class="btn btn-flat bg-twitter"><i class="fa fa-twitter"></i></span>twitter</a>
-          <a href="#" target="_blank"><span class="btn btn-flat bg-github"><i class="fa fa-github"></i></span>github</a>
-          <a href="#" target="_blank"><span class="btn btn-flat bg-youtube"><i class="fa fa-youtube-play"></i></span>youtube</a>
-          <a href="#" target="_blank"><span class="btn btn-flat bg-linkedin"><i class="fa fa-linkedin"></i></span>linkedin</a>
-          <a href="#" target="_blank"><span class="btn btn-flat bg-codepen"><i class="fa fa-codepen"></i></span>codepen</a>
-          <a href="#" target="_blank"><span class="btn btn-flat bg-instagram"><i class="fa fa-instagram"></i></span>Instagram</a>
-          <a href="#" target="_blank"><span class="btn btn-flat bg-spotify"><i class="fa fa-spotify"></i></span>Spotify</a>
-          <a href="#" target="_blank"><span class="btn btn-flat bg-dribbble"><i class="fa fa-dribbble"></i></span>dribbble</a>
-          <a href="#" target="_blank"><span class="btn btn-flat bg-behance"><i class="fa fa-behance"></i></span>behance</a>
-          <a href="#" target="_blank"><span class="btn btn-flat bg-behance"><i class="fa fa-flickr"></i></span>flickr</a>
-          <a href="#" target="_blank"><span class="btn btn-flat bg-google-plus"><i class="fa fa-google"></i></span>google +</a>
+          <a href="https://twitter.com/_felipeweb" target="_blank"><span class="btn btn-flat bg-twitter"><i class="fa fa-twitter"></i></span>twitter</a>
+          <a href="https://github.com/felipeweb" target="_blank"><span class="btn btn-flat bg-github"><i class="fa fa-github"></i></span>github</a>
+          <a href="https://br.linkedin.com/in/felipe-paes-de-oliveira-a9960b7b" target="_blank"><span class="btn btn-flat bg-linkedin"><i class="fa fa-linkedin"></i></span>linkedin</a>
         </div>
       </div>
     </div>
