--- a/default.hbs
+++ b/default.hbs
@@ -27,5 +27,13 @@
   {{ghost_foot}}
   <script src="{{asset "js/vendor.min.js"}}"></script>
   <script src="{{asset "js/app.min.js"}}"></script>
+  <script type="text/javascript">
+	var disqus_shortname = 'felipeweb';
+	(function() {
+		var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+		dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	})();
+</script>
 </body>
 </html>
