--- a/default.hbs
+++ b/default.hbs
@@ -27,7 +27,8 @@
   {{ghost_foot}}
   <script src="{{asset "js/vendor.min.js"}}"></script>
   <script src="{{asset "js/app.min.js"}}"></script>
-  <script type="text/javascript">
+<div id="disqus_thread"></div>
+<script type="text/javascript">
 	var disqus_shortname = 'felipeweb';
 	(function() {
 		var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
@@ -35,5 +36,6 @@
 		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 	})();
 </script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
 </html>
