colocando na lista

--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -4,9 +4,11 @@
   {{!-- Add your content here --}}
   <div class="card">
     <div class="title">Links</div>
-    <a href="http://caelum.com.br">Caelum</a>
-    <a href="http://alura.com.br">Alura</a>
-    <a href="http://casadocodigo.com.br">Casa do Código</a>
+    <ul>
+        <li><a href="http://caelum.com.br">Caelum</a></li>
+        <li><a href="http://alura.com.br">Alura</a></li>
+        <li><a href="http://casadocodigo.com.br">Casa do Código</a></li>
+    </ul>
   </div>
 
 </div>
