--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -18,9 +18,9 @@
       {{!-- Social navigation --}}
       <div class="nav-social right show-on-medium-screen">
         <div class="btn btn-flat" style="height:45px">
-          <span><i class="fa fa-facebook"></i></span>
-          <span><i class="fa fa-twitter"></i></span>
           <span><i class="fa fa-github"></i></span>
+          <span><i class="fa fa-twitter"></i></span>
+          <span><i class="fa fa-linkedin"></i></span>
         </div>
         {{!-- social Panel --}}
         <div class="nav-socialPanel">
