--- a/default.hbs
+++ b/default.hbs
@@ -6,9 +6,9 @@
     <meta name="description" content="{{meta_description}}"/>
     {{!-- icon  --}}
     <link rel="icon" sizes="192x192" href=" {{asset "img/icon.png"}}"/>
-    <link href='http://fonts.googleapis.com/css?family=Roboto:500,400italic,300,300italic,700,500italic,400'
+    <link href='https://fonts.googleapis.com/css?family=Roboto:500,400italic,300,300italic,700,500italic,400'
           rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Mono:400,400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{asset "css/style.min.css"}}">
     <link rel="stylesheet" type="text/css" href="{{asset "css/prism.css"}}"/>
     {{> "analytics"}}
