--- a/default.hbs
+++ b/default.hbs
@@ -9,6 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:500,400italic,300,300italic,700,500italic,400'
           rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,400italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic|Open+Sans:700,400" />
     <link rel="stylesheet" href="{{asset "css/style.min.css"}}">
     <link rel="stylesheet" type="text/css" href="{{asset "css/prism.css"}}"/>
     {{> "analytics"}}
