--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -5,9 +5,11 @@
   <div class="card">
     <div class="title">Links</div>
     <ul>
+        <li><a href="http://soulwebdesign.com.br">Soul Web Design</a></li>
         <li><a href="http://caelum.com.br">Caelum</a></li>
         <li><a href="http://alura.com.br">Alura</a></li>
         <li><a href="http://casadocodigo.com.br">Casa do Código</a></li>
+        <li><a href="http://galandra.com.br">Galandra</a></li>
     </ul>
   </div>
 
