--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -21,12 +21,14 @@
           <span><i class="fa fa-github"></i></span>
           <span><i class="fa fa-twitter"></i></span>
           <span><i class="fa fa-linkedin"></i></span>
+          <span><i class="fa fa-envelope"></i></span>
         </div>
         {{!-- social Panel --}}
         <div class="nav-socialPanel">
           <a href="https://twitter.com/_felipeweb" target="_blank"><span class="btn btn-flat bg-twitter"><i class="fa fa-twitter"></i></span>twitter</a>
           <a href="https://github.com/felipeweb" target="_blank"><span class="btn btn-flat bg-github"><i class="fa fa-github"></i></span>github</a>
           <a href="https://br.linkedin.com/in/felipe-paes-de-oliveira-a9960b7b" target="_blank"><span class="btn btn-flat bg-linkedin"><i class="fa fa-linkedin"></i></span>linkedin</a>
+          <a href="mailto:felipeweb.programador@gmail.com" target="_blank"><span class="btn btn-flat bg-github"><i class="fa fa-envelope"></i></span>email</a>
         </div>
       </div>
     </div>
