Adicionando posts externos

--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -2,6 +2,14 @@
 <div class="sidebar show-on-medium-screen">
 
   {{!-- Add your content here --}}
+    <div class="card">
+    <div class="title">Meus posts em outros lugares</div>
+    <ul>
+        <li><a href="http://blog.alura.com.br/pequenos-ajustes-grandes-mudancas/">Pequenos ajustes, grandes mudanças! (Blog do Alura)</a></li>
+        <li><a href="http://blog.caelum.com.br/entendendo-o-lazy-e-o-eager-load-da-jpa/">Entendendo o Lazy e o Eager Load da JPA (Blog da Caelum)</a></li>
+    </ul>
+  </div>
+  
   <div class="card">
     <div class="title">Links</div>
     <ul>
